syntax = "proto3";
package sg.flow.common.v1;

option java_multiple_files = true;
option java_package        = "sg.flow.common.v1";
option java_outer_classname = "CommonTransactionProto";

import "google/protobuf/timestamp.proto";
import "common/v1/account.proto";
import "common/v1/brief_card.proto";

message TransactionHistoryDetail {
  int64                         id                    = 1;
  string                        transaction_reference = 2;
  Account                       account               = 3;
  BriefCard     card                  = 4;
  google.protobuf.Timestamp     transaction_timestamp = 5; // date+time
  double                        amount                = 6;
  string                        transaction_type      = 7;
  string                        description           = 8;
  string                        transaction_status    = 9;
  string                        friendly_description  = 10;
  string                        transaction_category  = 11;
  string                        brand_name            = 12;
  string                        brand_domain          = 13;
  bool                          is_included_in_spending_or_income = 14;
  google.protobuf.Timestamp     revised_transaction_timestamp = 15; // date+time
}

message TransactionHistoryList {
  google.protobuf.Timestamp      start_timestamp = 1;
  google.protobuf.Timestamp      end_timestamp   = 2;
  repeated TransactionHistoryDetail transactions = 3;
}

message RecurringTransactionDetail {
  int64                         id                    = 1;
  string                        display_name          = 2;
  string                        category              = 3;
  double                        expected_amount       = 4;
  google.protobuf.Timestamp     next_transaction_date = 5;
  google.protobuf.Timestamp     last_transaction_date = 6;
  int64                         interval_days         = 7;
  int64                         occurrence_count      = 8;
  repeated int64                transaction_ids       = 9;
  int64                         year                  = 10;
  int64                         month                 = 11;
  string                        brand_domain          = 12;
  string                        brand_name            = 13;
}